# Fast-dLLM

./: .gitignore  pyproject.toml
fast_dllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
v2/: eval.py  eval_cpu.py  eval_gsm8k.sh  eval_gsm8k_reuse_activations.sh  eval_gsm8k_reuse_layers.sh  generation_functions.py  layer_reuse.py  log_utils.py
v2/results/: gsm8k_threshold1_run_20251104-220025.json  runtime_metrics_20251104-220118.json
v2/results/gsm8k_threshold1_run_raw/Efficient-Large-Model__Fast_dLLM_v2_7B/: results_2025-11-04T22-01-19.028119.json
